                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-05-2005 changed: cdda track filenames start at 1 instead of 0
  - 07-05-2005 fixed: wrong vorbisfile.dll in repository
  - 07-05-2005 changed: nav sounds respect volume settings
  - 07-05-2005 added: SF patch [1196982] make sidplayer respect volume at start - thanks to spiff
  - 07-05-2005 added: Threaded FileReader class to mp3 codec (paplayer) to allow file readahead caching.
  - 07-05-2005 fixed: keymap.xml had wrong id's for Library and Top 100 views which did not allow to queue up songs or switch to playlist menu.
  - 06-05-2005 fixed: Analog buttons sticking with new action system and updated keymap.xml for visualisation window.
  - 06-05-2005 added: SF patch [1194146] video mode switch based on game region - thanks to spiff
  - 06-05-2005 added: SF patch [1196174] make trailing fill characters be part of tag in music template - thanks to spiff
  - 06-05-2005 added: SF patch [1188623] Hides the .py extension when HME is checked - thanks to Nuka1195
  - 06-05-2005 added: SF patch [1196172] remove trailing dash for rss-feeds - thanks to spiff
  - 06-05-2005 changed: OnAction() now returns a bool.  It should be true if the action has been dealt with and
                        needs no further processing, and false if it hasn't been handled.
  - 06-05-2005 added: Check Xbox System-Clock at Startup (GeminiServer)
  - 05-05-2005 fixed: smoothness of NTSC video stored using 3:2 pulldown. Still plays at 24fps.. (dvdplayer)
  - 05-05-2005 fixed: aspectratio selection for dvdplayer
  - 05-05-2005 added: adjustable audio/video delay in dvdplayer
  - 05-05-2005 changed: Better discontinuity handling in dvdplayer